# mod_authn_ntlm

./: .appveyor.yml  CMakeLists.txt  INSTALL.txt  Makefile  README.md  copyright.txt
appveyor/: Get-Apache.ps1  build-task.cmd  build.cmd  install.cmd
conf/: httpd.conf
conf/ajax_post_demo/: .htaccess  ajax_anon.php  ajax_bounce.php
src/: mod_ntlm.c  mod_ntlm.h  mod_ntlm_authentication.c  mod_ntlm_authorization.c  mod_ntlm_interface.c  mod_ntlm_version.h
